samples/_failures_safe/1761401062_d003e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02591a4b.c: In function ‘main’:
./samples/SAFE/__tmp_02591a4b.c:166:28: error: missing terminating " character
  166 |                     printf("\n
      |                            ^~~
./samples/SAFE/__tmp_02591a4b.c:166:21: error: expected expression at end of input
  166 |                     printf("\n
      |                     ^~~~~~
./samples/SAFE/__tmp_02591a4b.c:166:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02591a4b.c:166:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02591a4b.c:166:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02591a4b.c:166:21: error: expected declaration or statement at end of input
